# sponsoredai

./: .linkedin_urn_cache.json  .zernio_profile.json  ads_data.py  app.py  cost_calculator.py  generative_engine.py  geo_service.py  llm_service.py  main.py  pyproject.toml  server.py  test_app.py  test_cost.py  vector_store.py
chroma_db/: chroma.sqlite3
pages/: 1_📢_Ads_Gallery.py  2_💰_Savings_Analytics.py  3_🚀_Generative_Engine_Optimization.py
templates/: index.html
